--- a/src/Post.css
+++ b/src/Post.css
@@ -22,9 +22,11 @@
   .post__header {
       display: flex;
       align-items: center;
+      justify-content: space-between;
       padding: 20px;
   }
   
   .avatar__image {
       margin-right: 15px;
   }
+
