--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,22 @@
 
 }
 
+.app__image {
+  transform: translateX(-100%);
+
+}
 .app__header {
+  display: flex;
   background-color: white;
   padding: 20px;
+  justify-content: space-around;
   border-bottom: 1px solid lightgray;
   object-fit: contain;
+}
+
+.modal__button {
+  padding: 10px 20px !important; 
+  
+  font-size: 16px !important;
 }
 
