--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,14 @@
   font-size: 16px !important;
 }
 
+
+
+
+.sign {
+  margin-top: 10px !important;
+}
+
+.input {
+  padding: 5px !important;
+  margin-bottom: 10px !important;
+}
